--- a/.github/workflows/go-releaser.yml
+++ b/.github/workflows/go-releaser.yml
@@ -22,10 +22,25 @@ jobs:
       - name: Setup ldflags variables
         id: ldflags
         run: |
-          echo "commit-date=$(git log --date=iso8601-strict -1 --pretty=%cI)" >> "$GITHUB_OUTPUT"
+          echo "commit_date=$(git log --date=iso8601-strict -1 --pretty=%cI)" >> "$GITHUB_OUTPUT"
           echo "commit=$(echo $GITHUB_SHA | cut -c1-7)" >> "$GITHUB_OUTPUT"
           echo "version=$(git describe --tags --always --dirty | cut -c2-)" >> "$GITHUB_OUTPUT"
-          echo "tree-state=$(if git diff --quiet; then echo "clean"; else echo "dirty"; fi)" >> "$GITHUB_OUTPUT"
+          echo "tree_state=$(if git diff --quiet; then echo "clean"; else echo "dirty"; fi)" >> "$GITHUB_OUTPUT"
+
+      - name: Get Previous Hash
+        id: get_previous_hash
+        run: |
+          previous_tag=$(git tag -l "v*.*.*" --sort=-version:refname | sed -n '2p')
+          
+          if [ -n "$previous_tag" ]; then
+            previous_hash=$(git rev-parse "$previous_tag")
+            echo "Previous tag: $previous_tag, hash: $previous_hash"
+          else
+            previous_hash=$(git rev-list --max-parents=0 -n 1 HEAD)
+            echo "No previous tag found, using first commit: $previous_hash"
+          fi
+          
+          echo "previous_hash=$previous_hash" >> $GITHUB_OUTPUT
 
       - name: Generate changelog
         id: generate_changelog
@@ -35,13 +50,15 @@ jobs:
         with:
           mode: 'COMMIT'
           configuration: 'changelog.configure.json'
+          fromTag: ${{ steps.get_previous_hash.outputs.previous_hash }}
+          toTag: ${{ github.ref_name }}
 
       - name: Display variables
         run: |
           echo "VERSION=${{ steps.ldflags.outputs.version }}"
           echo "COMMIT=${{ steps.ldflags.outputs.commit }}"
-          echo "COMMIT_DATE=${{ steps.ldflags.outputs.commit-date }}"
-          echo "TREE_STATE=${{ steps.ldflags.outputs.tree-state }}"
+          echo "COMMIT_DATE=${{ steps.ldflags.outputs.commit_date }}"
+          echo "TREE_STATE=${{ steps.ldflags.outputs.tree_state }}"
           echo "CHANGELOG=${{ steps.generate_changelog.outputs.changelog }}"
 
       - name: Set up Go
@@ -62,8 +79,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           VERSION: ${{ steps.ldflags.outputs.version }}
           COMMIT: ${{ steps.ldflags.outputs.commit }}
-          COMMIT_DATE: ${{ steps.ldflags.outputs.commit-date }}
-          TREE_STATE: ${{ steps.ldflags.outputs.tree-state }}
+          COMMIT_DATE: ${{ steps.ldflags.outputs.commit_date }}
+          TREE_STATE: ${{ steps.ldflags.outputs.tree_state }}
           # Your GoReleaser Pro key, if you are using the 'goreleaser-pro' distribution
           # GORELEASER_KEY: ${{ secrets.GORELEASER_KEY }}
 
