chore: 修复编译脚本提交二进制文件

--- a/.github/workflows/go-releaser.yml
+++ b/.github/workflows/go-releaser.yml
@@ -94,3 +94,4 @@ jobs:
         with:
           generate_release_notes: false
           body: ${{ steps.generate_changelog.outputs.changelog }}
+          files: dist/build/*
